# SK-AutoD-ML-Library-for-Training-Curve-Auto-Diagnostician

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURVEDOCTOR_BUILD_GUIDE.md  Makefile  README.md  SK-AUTOD_BUILD_GUIDE.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml  pages.yml  publish.yml  tests.yml
Sample project for demo/: fashion_mnist_cnn.ipynb  food_vision_cnn.ipynb  insurance_premium_prediction.ipynb  titanic_survival_prediction.ipynb
benchmarks/: README.md  benchmark_performance.py
docs/: _config.yml  api_reference.md  architecture.md  changelog.md  detectors.md  index.md  installation.md  quickstart.md
docs/_sass/: custom.scss
docs/api/: reference.md
docs/contributing/: index.md
docs/detectors/: index.md
docs/guide/: cli.md  installation.md  quickstart.md
examples/: basic_usage.py  csv_input.py  custom_detector.py  keras_example.py  pytorch_example.py
notebooks/: sk_autod_demo.ipynb
outputs/yeast_demo/: class_names.json  curve_diagnosis_dropout_(m2).txt  curve_diagnosis_dropout_plus_l2_(m4).txt  curve_diagnosis_no_reg_(m1).txt  dropout_(m2).pth  dropout_plus_l2_(m4).pth  l2_(m3).pth  no_reg_(m1).pth  test_performance_summary.csv
sample_project/: transfer_learning_food_vision.ipynb  yeast_regularization_project.py
scripts/: README.md  generate_test_curves.py
sk_autod/: __init__.py  cli.py
sk_autod/core/: models.py  preprocessing.py  runner.py  validation.py
sk_autod/detectors/: __init__.py  base.py  data_leakage.py  dying_relu.py  early_stop.py  exploding_gradient.py  leakage.py  lr_high.py  lr_low.py  noisy.py  noisy_training.py  underfitting.py
sk_autod/reports/: __init__.py  text.py
sk_autod/utils/: __init__.py
src/sk_autod/core/: runner.py
src/sk_autod/detectors/: gradient.py  label_noise.py  overfitting.py
src/sk_autod/reports/: json.py
src/sk_autod/utils/: stats.py
tests/: test_lr_high.py  test_more_detectors.py  test_overfitting.py  test_runner.py  test_underfitting.py
website/: docs.html  index.html  tutorial.html
