[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sk-autod"
version = "0.1.0"
description = "Auto-diagnosis for training curves"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Shamique Khan" }]
dependencies = []

[project.scripts]
sk-autod = "sk_autod.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "build", "twine", "ruff", "mypy"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sk_autod*"]
